--- a/src/Lighthouse/Lighthouse.csproj
+++ b/src/Lighthouse/Lighthouse.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Akka" Version="1.2.3" />
-    <PackageReference Include="Akka.Cluster" Version="1.2.3" />
-    <PackageReference Include="Akka.Logger.NLog" Version="1.2.0" />
-    <PackageReference Include="Akka.Remote" Version="1.2.3" />
+    <PackageReference Include="Akka" Version="1.3.0" />
+    <PackageReference Include="Akka.Cluster" Version="1.3.0" />
+    <PackageReference Include="Akka.Logger.NLog" Version="1.3.0-beta" />
+    <PackageReference Include="Akka.Remote" Version="1.3.0" />
     <PackageReference Include="Topshelf" Version="3.2.0" />
     <PackageReference Include="Topshelf.NLog" Version="3.2.0" />
   </ItemGroup>
