--- a/src/common.props
+++ b/src/common.props
@@ -2,9 +2,8 @@
   <PropertyGroup>
     <Copyright>Copyright © 2015-2018 Petabridge, LLC</Copyright>
     <Authors>Petabridge</Authors>
-    <VersionPrefix>0.9.1</VersionPrefix>
-    <PackageReleaseNotes>First Dockerized release of Lighthouse intended for mainstream consumption.
-You can [access Petabridge's public Lighthouse Docker images for Akka.Cluster here](https://hub.docker.com/r/petabridge/lighthouse).</PackageReleaseNotes>
+    <VersionPrefix>0.9.2</VersionPrefix>
+    <PackageReleaseNotes>Upgraded to Akka.NET 1.3.7.</PackageReleaseNotes>
     <PackageIconUrl>
     </PackageIconUrl>
     <PackageProjectUrl>
