--- a/src/common.props
+++ b/src/common.props
@@ -16,6 +16,7 @@
   <PropertyGroup>
     <XunitVersion>2.4.1</XunitVersion>
     <MicrosoftSdkVersion>15.9.0</MicrosoftSdkVersion>
+    <FluentAssertionsVersion>5.6.0</FluentAssertionsVersion>
     <NetCoreVersion>netcoreapp2.1</NetCoreVersion>
     <NetStandardVersion>netstandard1.6</NetStandardVersion>
     <NetFrameworkLibVersion>net452</NetFrameworkLibVersion>
