--- a/src/Lighthouse/Dockerfile-linux
+++ b/src/Lighthouse/Dockerfile-linux
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/runtime:2.1 AS base
+FROM mcr.microsoft.com/dotnet/core/sdk:2.1 AS base
 WORKDIR /app
 
 # should be a comma-delimited list
@@ -12,4 +12,13 @@ COPY ./bin/Release/netcoreapp2.1/publish/ /app
 # 4053 - Akka.Cluster
 EXPOSE 9110 4053
 
-CMD ["dotnet", "Akka.Bootstrap.Docker.Sample.dll"]
+# Install Petabridge.Cmd client so it can be invoked remotely via
+# Docker or K8s 'exec` commands
+RUN dotnet tool install --global pbm 
+
+# Needed because https://stackoverflow.com/questions/51977474/install-dotnet-core-tool-dockerfile
+ENV PATH="${PATH}:/root/.dotnet/tools"
+
+# RUN pbm help
+
+CMD ["dotnet", "Lighthouse.dll"]
