--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -29,8 +29,8 @@ jobs:
     - task: CopyFiles@2
       displayName: 'Copy dotnet publish Output'
       inputs:
-        sourceFolder: src/Lighthouse/bin/**/publish
-        targetFolder: $(Build.ArtifactStagingDirectory)/bin/netcoreapp2.1/publish
+        sourceFolder: src/Lighthouse/bin/Release/netcoreapp2.1/publish/
+        targetFolder: $(Build.ArtifactStagingDirectory)/bin/Release/netcoreapp2.1/publish/
     - task: CopyFiles@2
       displayName: 'Copy Dockerfiles'
       inputs:
