--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -62,6 +62,11 @@ jobs:
           downloadType: 'single'
           artifactName: 'drop'
           downloadPath: '$(Build.StagingDirectory)'
+      - task: Bash@3
+        displayName: "Rename Dockerfile"
+        inputs:
+          targetType: inline
+          script: 'mv Dockerfile-linux Dockerfile'
       - task: Docker@2
         displayName: "Login to Docker Hub"
         inputs:
@@ -99,6 +104,11 @@ jobs:
           downloadType: 'single'
           artifactName: 'drop'
           downloadPath: '$(Build.StagingDirectory)'
+      - task: BatchScript@1
+        displayName: "Rename Dockerfile"
+        inputs:
+          targetType: inline
+          script: 'ren Dockerfile-windows Dockerfile'
       - task: Docker@2
         displayName: "Login to Docker Hub"
         inputs:
