--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -62,11 +62,10 @@ jobs:
           downloadType: 'single'
           artifactName: 'drop'
           downloadPath: '$(Build.StagingDirectory)'
-      - task: Bash@3
+      - task: CmdLine@2
         displayName: "Rename Dockerfile"
         inputs:
-          targetType: inline
-          script: 'mv Dockerfile-linux Dockerfile'
+          script: mv Dockerfile-linux Dockerfile
       - task: Docker@2
         displayName: "Login to Docker Hub"
         inputs:
@@ -104,11 +103,10 @@ jobs:
           downloadType: 'single'
           artifactName: 'drop'
           downloadPath: '$(Build.StagingDirectory)'
-      - task: BatchScript@1
+      - task: CmdLine@2
         displayName: "Rename Dockerfile"
         inputs:
-          targetType: inline
-          script: 'ren Dockerfile-windows Dockerfile'
+          script: ren Dockerfile-windows Dockerfile
       - task: Docker@2
         displayName: "Login to Docker Hub"
         inputs:
