--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -61,6 +61,7 @@ jobs:
           buildType: 'current'
           downloadType: 'single'
           artifactName: 'drop'
+          itemPattern: drop/**
           downloadPath: '$(Build.StagingDirectory)'
       - task: CmdLine@2
         displayName: "Rename Dockerfile"
@@ -102,6 +103,7 @@ jobs:
           buildType: 'current'
           downloadType: 'single'
           artifactName: 'drop'
+          itemPattern: drop/**
           downloadPath: '$(Build.StagingDirectory)'
       - task: CmdLine@2
         displayName: "Rename Dockerfile"
