--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -63,6 +63,11 @@ jobs:
           artifactName: 'drop'
           itemPattern: drop/**
           downloadPath: '$(Build.StagingDirectory)'
+      - task: CopyFiles@2
+        displayName: 'Copy into working directory'
+        inputs:
+          sourceFolder: $(Build.StagingDirectory)/drop
+          targetFolder: $(Build.StagingDirectory)
       - task: CmdLine@2
         displayName: "Rename Dockerfile"
         inputs:
@@ -105,6 +110,11 @@ jobs:
           artifactName: 'drop'
           itemPattern: drop/**
           downloadPath: '$(Build.StagingDirectory)'
+      - task: CopyFiles@2
+        displayName: 'Copy into working directory'
+        inputs:
+          sourceFolder: $(Build.StagingDirectory)/drop
+          targetFolder: $(Build.StagingDirectory)
       - task: CmdLine@2
         displayName: "Rename Dockerfile"
         inputs:
