--- a/build-system/windows-release.yaml
+++ b/build-system/windows-release.yaml
@@ -69,6 +69,11 @@ jobs:
           sourceFolder: $(Build.StagingDirectory)/drop
           targetFolder: $(Agent.BuildDirectory)
       - task: CmdLine@2
+        displayName: "DEBUG: list contents"
+        inputs:
+          workingDirectory: $(Agent.BuildDirectory)
+          script: ls
+      - task: CmdLine@2
         displayName: "Rename Dockerfile"
         inputs:
           script: mv Dockerfile-linux Dockerfile
@@ -116,8 +121,14 @@ jobs:
           sourceFolder: $(Build.StagingDirectory)/drop
           targetFolder: $(Agent.BuildDirectory)
       - task: CmdLine@2
+        displayName: "DEBUG: list contents"
+        inputs:
+          workingDirectory: $(Agent.BuildDirectory)
+          script: dir
+      - task: CmdLine@2
         displayName: "Rename Dockerfile"
         inputs:
+          workingDirectory: $(Agent.BuildDirectory)
           script: ren Dockerfile-windows Dockerfile
       - task: Docker@2
         displayName: "Login to Docker Hub"
